# cpp_labs

./: .gitignore  README.md
coursework/: .gitignore  README.md  coursework.sln  coursework.vcxproj  coursework.vcxproj.filters
coursework/levels/: codes.txt  test.arknd
coursework/source/: WindowHandler.cpp  WindowHandler.hpp  main.cpp
coursework/source/Game/: Arkanoid.cpp  Arkanoid.hpp  TextureManager.cpp  TextureManager.hpp  utility.hpp
coursework/source/Game/Components/: Ball.hpp  Block.hpp  CollideableObject.cpp  CollideableObject.hpp  MoveableObject.cpp  MoveableObject.hpp  Object.cpp  Object.hpp  Slider.hpp
coursework/source/Game/Components/Ball/: Ball.cpp  Ball.hpp
coursework/source/Game/Components/Block/: BaseBlock.hpp  Block.cpp  Block.hpp  Blocks.cpp  Blocks.hpp  BonusBlock.hpp  DefaultBlock.hpp  InvulnerableBlock.hpp  JellyBlock.hpp
coursework/source/Game/Components/Bonus/: Bonus.hpp  FallingBonus.hpp
coursework/source/Game/Components/Floor/: Floor.cpp  Floor.hpp
documents/: .~lock.Lab 3 семестр.doc#  2_1_1_Дрекалов.docx  2_1_2_Дрекалов.docx  2_1_3_Дрекалов.docx  2_1_4_Дрекалов.docx  2_1_5_Дрекалов.docx  Lab 3 семестр.doc
lab1/: CMakeLists.txt  README.md
lab1/calc_custom_exception/: CalcException.hpp
lab1/calculator/: CMakeLists.txt
lab1/calculator/source/: CLI.hpp  Calculator.cpp  TokenConverter.cpp  TokenConverter.hpp  TokenScanner.cpp  TokenScanner.hpp  main.cpp
lab1/calculator/source/Calculacor/: Calculator.cpp  PolishCalculator.cpp  TokenConverter.cpp  TokenConverter.hpp  TokenScanner.hpp
lab1/calculator/source/Calculator/: Calculator.cpp  Calculator.hpp  PolishCalculator.cpp  PolishCalculator.hpp  TokenConverter.cpp  TokenConverter.hpp  TokenScanner.cpp  TokenScanner.hpp
lab1/calculator/source/Calculator/FuncLoader/: FuncLoader.cpp  FuncLoader.hpp  PluginsLoader.cpp  PluginsLoader.hpp
lab1/calculator/source/Calculator/PluginsLoader/: PluginsLoader.cpp  PluginsLoader.hpp
lab1/calculator/source/Tokens/: DefaultToken.hpp  FunctionToken.hpp  NumberToken.hpp  OperatorToken.hpp  Tokens.hpp  VariableToken.hpp
lab1/calculator/source/calculator_logic/: PolishCalculator.cpp  PolishCalculator.hpp  TokenConverter.cpp  TokenConverter.hpp  TokenScanner.cpp  TokenScanner.hpp
lab1/calculator/source/tokens/: ComputableOperator.hpp  Operator.hpp  Parenthesis.hpp  Token.hpp
lab1/calculator/source/tokens/operands/: Operand.hpp  Operands.hpp
lab1/calculator/source/tokens/priority_level/: PriorityLevelStorage.cpp  PriorityLevelStorage.hpp
lab1/calculator/source/tokens/suffix_operators/: SuffixOperator.hpp  SuffixOperators.hpp
lab1/default_operators/: CMakeLists.txt
lab1/default_operators/include/: DefaultOperators.hpp  DefaultPrefixOperators.hpp  DefaultSuffixOperators.hpp
lab1/default_operators/lib/: default_operators.lib
lab1/default_operators/source/: DefaultOperators.cpp
lab1/default_operators/source/default_postfix_operators/: DefaultPostfixOperators.cpp  DefaultPostfixOperators.hpp
lab1/default_operators/source/default_prefix_operators/: DefaultPrefixOperators.cpp  DefaultPrefixOperators.hpp
lab1/default_operators/source/default_suffix_operators/: DefaultSuffixOperators.cpp  DefaultSuffixOperators.hpp
lab1/dll_plugins/: CMakeLists.txt
lab1/dll_plugins/include/: export.hpp
lab1/dll_plugins/source/: log.cpp  pow.cpp  sqrt.cpp
lab1/functions/: CMakeLists.txt
lab1/functions/source/: Sqrt.cpp  Sqrt.hpp  cos.cpp  export.hpp  log.cpp  log.hpp  pow.cpp  sin.cpp  sqrt.cpp  sqrt.hpp
lab1/token_default_classes/: ComputableOperator.hpp  DefaultPriorityRanges.hpp  Function.hpp  Operand.hpp  Operands.hpp  Operator.hpp  Parenthesis.hpp  PostfixOperator.hpp  PrefixOperator.hpp  SuffixOperator.hpp  Token.hpp
task1/: CMakeLists.txt  README.md  buildCmake.sh  list.cpp  list.hpp  main.cpp  task1.sln  task1.vcxproj  task1.vcxproj.filters
task1/files/: words1.data  words12.data  words2.data  words3.data  words34.data  words4.data
task1/source/: main.cpp  quadratic_equation.cpp  quadratic_equation.hpp
task1/var_1/: var_1.vcxproj
task2/: README.md  list.hpp  main.cpp  surnames.txt  task2.sln  task2.vcxproj  task2.vcxproj.filters  test.data
task2/1/: task2.vcxproj  task2.vcxproj.filters
task2/1/data/: fullnames.data  mammoths.note
task2/1/source/: main.cpp  notebook.cpp  notebook.hpp
task2/source/: console_user_interface.cpp  console_user_interface.hpp  main.cpp  quadratic_equation.cpp  quadratic_equation.hpp  students.cpp  students.hpp  students_work_sim.cpp  students_work_sim.hpp  teacher.cpp  teacher.hpp
task2/var_1/: var_1.vcxproj  var_1.vcxproj.filters
task2/var_1/source/: main.cpp
task2/var_10_11_12/: CMakeLists.txt  var_10_11_12.vcxproj  var_10_11_12.vcxproj.filters
task2/var_10_11_12/graphs/: graph_as_list.graph
task2/var_10_11_12/source/: graph.cpp  graph.hpp  list.hpp  main.cpp
task2_1/: CMakeLists.txt
task2_1/source/: list.hpp
task2_10_11/: CMakeLists.txt  README.md
task2_10_11/graphs/: list2.graph  matrix.graph  matrix2.graph
task2_10_11/source/: graph.cpp  graph.hpp  main.cpp
task3/: .gitignore  README.md  game.conf  task3.sln  task3.vcxproj  task3.vcxproj.filters
task3/source/: main.cpp
task3/source/Game/: Bonus.cpp  Game.cpp  Game.hpp
task3/source/Game/Field/: Gem.cpp  Gem.hpp  GemsField.cpp  GemsField.hpp
task3/source/WindowHandler/: WindowHandler.cpp  WindowHandler.hpp
task3/source/WindowHandler/Components/: FpsBar.cpp  FpsBar.hpp  GameView.cpp  GameView.hpp  Menu.cpp  Menu.hpp
task3_6/: CMakeLists.txt  README.md  input.txt
task3_6/source/: graph.cpp  graph.hpp  main.cpp
task4_10/: CMakeLists.txt  test.db
task4_10/databases/: numbers.edb
task4_10/source/: console.cpp  console.hpp  expert.cpp  expert.hpp  main.cpp  question_tree.cpp  question_tree.hpp
task5_1/: CMakeLists.txt
task5_1/source/: console.cpp  console.hpp  main.cpp  tree.cpp  tree.hpp
task5_1/texts/: banana.txt
task5_11/: CMakeLists.txt
task5_11/source/: console.cpp  console.hpp  main.cpp  segment_tree.cpp  segment_tree.hpp
tetstststs/: tetstststs.sln  tetstststs.vcxproj
(+4 files in other folders)
